@@ -11,6 +11,7 @@ other protocols (Whois,DAS,RRI,RRP) or transports *might* not work in this versi
 = Enabled CoreNIC Launchphase
 = Fix NGTLD default object types + PIR & CORENIC
 = Updated NGTLD: split Afilias int Afilias, Afilias-SRS, and PIR, and added bep_type for shared/dedicated beps to detect tlds etc.
+= IDN object now detects extlang (eg zh-tw)
 
 #### gTLDS
 = Updated Neustar+Afilias_Verisign IDN units to accept the IDN object, or if not avail fall back to $rd->{language}
